--- a/demo/index.html
+++ b/demo/index.html
@@ -7,9 +7,8 @@
 
   <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace/dist/shoelace.js"></script>
 
-  <script type="module" src="../dist/data-grid.min.js"></script>
+  <script type="module" src="../dist/data-grid.js"></script>
   <script type="module">
     customElements.whenDefined("data-grid").then(() => {
       console.log("defined");
@@ -26,6 +25,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../dist/data-grid.min.css" />
   <link rel="stylesheet" href="demo.css" />
+
+  <script src="https://cdn.jsdelivr.net/gh/lekoala/formidable-elements/dist/format-number.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/lekoala/formidable-elements/dist/format-date.min.js"></script>
 
   <script type="module">
     document.querySelector("#darkmode").addEventListener("click", function (ev) {
