--- a/demo/actions.html
+++ b/demo/actions.html
@@ -7,7 +7,7 @@
     <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
 
-    <script type="module" src="../dist/data-grid.min.js"></script>
+    <script type="module" src="../dist/data-grid.js"></script>
 
     <link
       rel="icon"
@@ -18,7 +18,7 @@
     <!-- include bootstrap just to make sure it doesn't conflict with our styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mvp.css@1/mvp.css" />
-    <link rel="stylesheet" href="../dist/data-grid.min.css" />
+    <link rel="stylesheet" href="../dist/data-grid.css" />
     <link rel="stylesheet" href="demo.css" />
 
     <script type="module">
