--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.css" />
   <!-- include bootstrap just to make sure it doesn't conflict with our styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../dist/data-grid.min.css" />
+  <link rel="stylesheet" href="../dist/data-grid.css" />
   <link rel="stylesheet" href="demo.css" />
 
   <script src="https://cdn.jsdelivr.net/gh/lekoala/formidable-elements/dist/format-number.min.js"></script>
@@ -110,7 +110,7 @@
       </p>
       <ul>
         <li><code>transform</code> Can transform row content</li>
-        <li><code>format</code> Use custom formatting (eg: display a flag, use shoelace number formatting)</li>
+        <li><code>format</code> Use custom formatting (eg: display a flag, use custom element for number formatting)</li>
       </ul>
       <data-grid id="fixed-demo" sticky style="height: 400px" data-url="demo-simple.json" data-per-page="25" data-expand="true"
         data-selectable="true" data-debug="true"></data-grid>
