add save state to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -95,12 +95,13 @@
       <li><code>autosize=true</code> to compute column sizes automatically</li>
       <li><code>sort=true</code> to make sortable columns</li>
       <li><code>selectable=true</code> to allow row selection</li>
+      <li><code>save-state=true</code> to save grid state</li>
     </ul>
 
     <div class="container g-0 mb-4 mw-100">
       <button id="get-selection" class="btn btn-primary mb-3">Get selection</button>
       <data-grid id="basic-demo" sticky data-url="demo.json" data-expand="true" data-selectable="true" data-menu="true" data-filter="true"
-        data-resizable="true" data-autosize="true" data-reorder="true" data-sort="true" data-debug="true"
+        data-resizable="true" data-autosize="true" data-reorder="true" data-sort="true" data-debug="true" data-save-state="true"
         data-config='{"perPage": 50}'></data-grid>
     </div>
     <div class="container g-0 mb-4 mw-100">
