--- a/demo/api.html
+++ b/demo/api.html
@@ -147,7 +147,7 @@
       <p><em>Standalone data grid web component</em></p>
     </header>
     <main>
-      <ul class="nav nav-pills">
+      <ul class="nav nav-pills mb-2">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Default</a>
         </li>
