--- a/demo/index.html
+++ b/demo/index.html
@@ -66,7 +66,7 @@
     <p><em>Standalone data grid web component</em></p>
   </header>
   <main class="container">
-    <ul class="nav nav-pills">
+    <ul class="nav nav-pills mb-2">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Default</a>
       </li>
